--- a/about.html
+++ b/about.html
@@ -12,6 +12,27 @@
             background-color: black;
 
         }
+
+        @media (min-width: 1196px) and (max-width: 2000px) {
+            p {
+                font-size: 16px;
+            }
+        }
+        @media (min-width: 990px) and (max-width: 1196px) {
+            p {
+                font-size: 11.8px;
+            }
+        }
+        @media (min-width: 768px) and (max-width: 990px) {
+            p {
+                font-size: 6.7px;
+            }
+        }
+        @media (max-width: 768px) {
+            p {
+                font-size: 14px;
+            }
+        }
     </style>
 </head>
 
@@ -56,10 +77,19 @@
                 <h1 class="text-white pt-2 pb-2" style="font-size: 2.5vw;">About Vetr</h1>
             </div>
 
-            <div class="col-md-6 mx-auto p-0" style="background-image: url('images/Vetr_Avatar.png');height: 550px;background-size: contain;background-repeat: no-repeat;">
-                <span class="m-5 pb-4 text-white text-center" style="position: absolute;border: blanchedalmond 5px solid;">
-                    <p class="p-4 text-center" style="font-size: 0.86vw;">
-                        There is a fire, which is hidden in the hearts. It's a fire, which never grows cold. This is a secret, which the people of the world do not yet know about. This is why Vetr was born, in order to tell more people throughout the world about small bits of this secret with its stories. Therefore, whenever you feel alone, cold, and dark, listen to the stories of Vetr and feel a fire that warms your heart! Perhaps you are interested to know more about Vetr. It is nothing but a shadow, which speaks of the light of the sun. Vetr is in love, and someone who is in love has nothing to say other than the story of his love. Furthermore, someone in love has nothing to show other than the beautiful face of his beloved
+            <div class="col-md-6 mx-auto p-0"
+                style="background-image: url('images/Vetr_Avatar.png');height: 550px;background-size: contain;background-repeat: no-repeat;">
+                <span class="m-5 pb-4 text-white text-center"
+                    style="position: absolute;border: blanchedalmond 5px solid;">
+                    <p class="p-4 text-center">
+                        There is a fire, which is hidden in the hearts. It's a fire, which never grows cold. This is a
+                        secret, which the people of the world do not yet know about. This is why Vetr was born, in order
+                        to tell more people throughout the world about small bits of this secret with its stories.
+                        Therefore, whenever you feel alone, cold, and dark, listen to the stories of Vetr and feel a
+                        fire that warms your heart! Perhaps you are interested to know more about Vetr. It is nothing
+                        but a shadow, which speaks of the light of the sun. Vetr is in love, and someone who is in love
+                        has nothing to say other than the story of his love. Furthermore, someone in love has nothing to
+                        show other than the beautiful face of his beloved
                     </p>
                     <hr class="col-5" style="border: white 2px solid;">
                     <img src="images/vetr_logo.png" width="80px" alt="">
