--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
 
                     <div class="form-group">
                         <textarea class="form-control" name="message" id="exampleFormControlTextarea1"
-                            rows="6">Type your message here...</textarea>
+                            rows="6" placeholder="Type your message here..."></textarea>
                     </div>
                     <button type="submit" class="btn float-right btn-dark btn-lg">Submit</button>
                     <br>
