--- a/lyric.html
+++ b/lyric.html
@@ -11,6 +11,14 @@
         body {
             background-color: black;
         }
+        @media (min-width: 993px) and (max-width: 1196px) {
+            h3 {
+                font-size: 18px;
+            }
+            p {
+                font-size: 10px;
+            }
+        }
     </style>
 </head>
 
