Fix progress bar bug

--- a/music.html
+++ b/music.html
@@ -77,7 +77,7 @@
             border-radius: 8px;
         }
 
-        #myprogressBar {
+        #myprogressBarmusic1,#myprogressBarmusic2, #myprogressBarmusic3  {
             width: 0;
             height: 7px;
             background-color: #ffffff;
@@ -146,18 +146,18 @@
                                     <li style="margin-left:15px">Download</li>
                                 </ul>
                             </div>
-                            <audio id="music_player">
-                                <source src="music/Drink.mp3" />
+                            <audio id="music1">
+                                <source src="http://vetrmusic.com/music/Drink.mp3" />
                             </audio>
                             <p style="position: absolute;color: azure; padding: 5px;">03</p>
                             <div id="Progress_Status">
-                                <div id="myprogressBar"></div>
+                                <div id="myprogressBarmusic1"></div>
                             </div>
                             <span class="current" style="position: absolute;margin-left: 657px;margin-top: 5px;color: blanchedalmond;"></span>
                             <span class="duration" style="position: absolute;margin-left: 695px;margin-top: 5px;color: blanchedalmond;"></span>
                             <input type="image" src="images/Cover_Lyric1.png" id="cover">
-                            <input type="image" src="images/play.png" onclick="play()" id="play_button">
-                            <input type="image" src="images/pause.png" onclick="pause()" id="pause_button">
+                            <input type="image" src="images/play.png" onclick="play('music1')" id="play_button">
+                            <input type="image" src="images/pause.png" onclick="pause('music1')" id="pause_button">
                             <input type="image" src="images/Streamicon.png"
                                 onclick="window.location.href = '';" id="streamicon">
                             <input type="image" src="images/Buy.png"
@@ -182,19 +182,19 @@
                                     <li style="margin-left:15px">Download</li>
                                 </ul>
                             </div>
-                            <audio id="music_player">
-                                <source src="music/Three.mp3" />
+                            <audio id="music2">
+                                <source src="http://vetrmusic.com/music/Three.mp3" />
                             </audio>
                             <div id="Progress_Status">
-                                <div id="myprogressBar"></div>
+                                <div id="myprogressBarmusic2"></div>
                             </div>
                             <span class="current" style="position: absolute;margin-left: 657px;margin-top: 5px;color: blanchedalmond;"></span>
                             <span class="duration" style="position: absolute;margin-left: 695px;margin-top: 5px;color: blanchedalmond;"></span>
                             <input type="image" src="images/Cover_Lyric1.png" id="cover">
                             <p style="position: absolute;color: azure; padding: 5px;">02</p>
                             <input type="image" src="images/Cover_Lyric2.png" id="cover">
-                            <input type="image" src="images/play.png" onclick="play()" id="play_button">
-                            <input type="image" src="images/pause.png" onclick="pause()" id="pause_button">
+                            <input type="image" src="images/play.png" onclick="play('music2')" id="play_button">
+                            <input type="image" src="images/pause.png" onclick="pause('music2')" id="pause_button">
                             <input type="image" src="images/Streamicon.png"
                                 onclick="window.location.href = '';" id="streamicon">
                             <input type="image" src="images/Buy.png"
@@ -221,21 +221,19 @@
                                     <li style="margin-left:15px">Download</li>
                                 </ul>
                             </div>
-                            <audio id="music_player">
-                                <source src="music/After.mp3" />
+                            <audio id="music3">
+                                <source src="http://vetrmusic.com/music/After.mp3" />
                             </audio>
                             <div id="Progress_Status">
-                                <div id="myprogressBar"></div>
+                                <div id="myprogressBarmusic3"></div>
                             </div>
                             <span class="current" style="position: absolute;margin-left: 657px;margin-top: 5px;color: blanchedalmond;"></span>
                             <span class="duration" style="position: absolute;margin-left: 695px;margin-top: 5px;color: blanchedalmond;"></span>
-                            <audio id="music_player">
-                                <source src="music/After.mp3" />
-                            </audio>
+                        
                             <p style="position: absolute;color: azure; padding: 5px;">01</p>
                             <input type="image" src="images/Cover_Lyric3.png" id="cover">
-                            <input type="image" src="images/play.png" onclick="play()" id="play_button">
-                            <input type="image" src="images/pause.png" onclick="pause()" id="pause_button">
+                            <input type="image" src="images/play.png" onclick="play('music3')" id="play_button">
+                            <input type="image" src="images/pause.png" onclick="pause('music3')" id="pause_button">
                             <input type="image" src="images/Streamicon.png"
                                 onclick="window.location.href = '';" id="streamicon">
                             <input type="image" src="images/Buy.png"
@@ -259,18 +257,13 @@
 </html>
 
 <script>
-    document.addEventListener("DOMContentLoaded", function () { startplayer(); }, false);
-    var player;
-    function startplayer() {
-        player = document.getElementById('music_player');
-        player.controls = false;
+    
+    function pause(player) {
+        document.getElementById(player).pause()
     }
-    function pause() {
-        player.pause();
-    }
-    var music_player = document.getElementById("music_player");
-    function update() {
-        var element = document.getElementById("myprogressBar");
+    function update(player) {
+        var music_player =  document.getElementById(player);
+        var element = document.getElementById("myprogressBar"+player);
         var width = 0;
         var identity = setInterval(scene, 10);
         function scene() {
@@ -279,29 +272,29 @@
             } else {
                 width = (music_player.currentTime / music_player.duration) * 100;
                 element.style.width = width + "%";
-                current();
+                current(player);
             }
         }
     }
-    function play() {
-        music_player.play();
-        update();
-        duration();
+    function play(player) {
+        document.getElementById(player).play();
+        update(player);
+        duration(player);
     }
-    function current() {
-        var audio = music_player;
+    function current(player) {
+        var audio = player;
         if (audio.readyState > 0) {
             var minutes = parseInt(audio.currentTime / 60, 10);
             var seconds = parseInt(audio.currentTime % 60);
-            $(".current").html(minutes + ":" + seconds);
+            $(".current-"+player).html(minutes + ":" + seconds);
         }
     }
-    function duration() {
-        var audio = music_player;
+    function duration(player) {
+        var audio = player;
         if (audio.readyState > 0) {
             var minutes = parseInt(audio.duration / 60, 10);
             var seconds = parseInt(audio.duration % 60);
-            $(".duration").html(minutes + ":" + seconds);
+            $(".duration-"+player).html(minutes + ":" + seconds);
         }
     }
 </script>
